force-app/main/default/objects/leaseworks__Approval_Comparison_Fields__c/leaseworks__Approval_Comparison_Fields__c.object-meta.xml
<CustomObject>
    <description>Intended for comparison of different sets of Commercial Terms within the approval process of a final proposal to the prospect.</description>
    <label>Terms Comparison</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms Comparison</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>