force-app/main/default/objects/leaseworks__Approval_Comparison_Fields__c/fields/leaseworks__Maintenance_Reserves__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserves__c</fullName>
    <label>Maintenance Reserves</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Return Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>