force-app/main/default/objects/leaseworks__Approval_Comparison_Fields__c/fields/leaseworks__MTOW__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MTOW__c</fullName>
    <label>MTOW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>