force-app/main/default/objects/leaseworks__Approval_Comparison_Fields__c/fields/leaseworks__RAF__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__RAF__c</fullName>
    <label>RAF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>