force-app/main/default/objects/leaseworks__Approval_Comparison_Fields__c/fields/leaseworks__Rent_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Type__c</fullName>
    <label>Rent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed/Fixed</fullName>
            </value>
            <value>
                <fullName>Float/Fixed</fullName>
            </value>
            <value>
                <fullName>Float/Float</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>