force-app/main/default/objects/leaseworks__Approval_Comparison_Fields__c/fields/leaseworks__Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Last Offer</fullName>
            </value>
            <value>
                <fullName>Prospect Request</fullName>
            </value>
            <value>
                <fullName>Marketing Recommendation</fullName>
            </value>
            <value>
                <fullName>New Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>